@@ -21,7 +21,7 @@ rule libtorrent_dependency ( properties * )
 	}
 	else
 	{
-		result += <library>/torrent//torrent/<link>shared/<boost-link>shared/<export-extra>on ;
+		result += <library>/torrent//torrent/<link>static/<boost-link>static/<export-extra>on ;
 	}
 
 	return $(result) ;
