@@ -1,3 +1,4 @@
+	* fix dht_bootstrap_alert being posted
 	* SetFileValidData fix on windows (prevents zero-fill)
 	* fix minor lock_files issue on unix
 
